--- a/attach-container/ui/package.json
+++ b/attach-container/ui/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@karmada/terminal": "^1.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11",
     "@eslint/js": "^9.21.0",
+    "@types/node": "^20.12.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
