chore: use alias in vite.config and tsconfig
Signed-off-by: warjiang <1096409085@qq.com>

--- a/attach-container/ui/tsconfig.node.json
+++ b/attach-container/ui/tsconfig.node.json
@@ -19,6 +19,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
