feat: use .env in vite react app
Signed-off-by: warjiang <1096409085@qq.com>

--- a/attach-container/.env.example
+++ b/attach-container/.env.example
@@ -2,3 +2,6 @@ KUBECONFIG_PATH=b
 KUBE_CONTEXT=b
 SKIP_TLS_VERIFY=false
 SERVER_ADDRESS=a
+VITE_NAMESPACE_NAME='namespace name'
+VITE_POD_NAME='pod name'
+VITE_CONTAINER_NAME='container name'
