chore: update .env.example
Signed-off-by: warjiang <1096409085@qq.com>

--- a/attach-container/.env.example
+++ b/attach-container/.env.example
@@ -1,7 +1,7 @@
-KUBECONFIG_PATH=b
-KUBE_CONTEXT=b
+KUBECONFIG_PATH=path/to/kubeconfig/file
+KUBE_CONTEXT=context/in/kubeconfig/file
 SKIP_TLS_VERIFY=false
-SERVER_ADDRESS=a
-VITE_NAMESPACE_NAME='namespace name'
-VITE_POD_NAME='pod name'
-VITE_CONTAINER_NAME='container name'
+SERVER_ADDRESS=address/that/your/gin/server/need/listen
+VITE_NAMESPACE_NAME=namespace/for/pod/that/you/want/to/attach
+VITE_POD_NAME=pod/name/that/you/want/to/attach
+VITE_CONTAINER_NAME=container/name/in/pod
