--- a/log-viewer/ui/package.json
+++ b/log-viewer/ui/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xterm/xterm": "^5.5.0",
+    "axios": "^1.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
