--- a/log-viewer/ui/package.json
+++ b/log-viewer/ui/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "ahooks": "^3.8.4",
     "axios": "^1.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
