ci: only trigger build tgbot when changes for under the tgbot folder
Signed-off-by: warjiang <1096409085@qq.com>

--- a/.github/workflows/tgbot-image.yml
+++ b/.github/workflows/tgbot-image.yml
@@ -7,9 +7,13 @@ on:
     # for PRs initiated by Dependabot.
     branches-ignore:
       - 'dependabot/**'
+    paths:
+      - 'tgbot/**'       # only be triggered for specific folders
   pull_request:
     branches:
       - main
+    paths:
+      - 'tgbot/**'       # only be triggered for specific folders
 jobs:
   build-and-push-image:
     name: build and push image
